# realtime-audio-udp

./: .gitmodules  README.md  test_sender.py  udp_audio_streamer.py
Cpp/: .gitignore  CMakeLists.txt  README.md
Cpp/include/: AudioPlayer.h  PacketParser.h  UDPAudioStreamer.h
Cpp/src/: AudioPlayer.cpp  PacketParser.cpp  UDPAudioStreamer.cpp  main.cpp  test_sender.cpp
ESP32/src/: README.md  array_process.cpp  array_process.h  esp-cortex.ino  nvs.h
python/: udp_audio_streamer.py
